--- a/index.html
+++ b/index.html
@@ -338,8 +338,9 @@
 <body>
   <!-- Splash -->
   <div id="splash">
-    <img src="logo.jpg" alt="Content Creator">
-    <div class="loading">Loading...</div>
+    <div style="font-size: 64px; margin-bottom: 16px;">📹</div>
+    <div style="font-size: 28px; font-weight: 700; background: linear-gradient(135deg, #a855f7, #06d6a0); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Content Creator</div>
+    <div class="loading" style="margin-top: 12px;">Loading...</div>
   </div>
 
   <!-- Header -->
