Add Content Creator logo

--- a/index.html
+++ b/index.html
@@ -338,9 +338,7 @@
 <body>
   <!-- Splash -->
   <div id="splash">
-    <div style="font-size: 64px; margin-bottom: 16px;">📹</div>
-    <div style="font-size: 28px; font-weight: 700; background: linear-gradient(135deg, #a855f7, #06d6a0); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Content Creator</div>
-    <div class="loading" style="margin-top: 12px;">Loading...</div>
+    <img src="logo.jpg" alt="Content Creator" style="max-width: 85%; max-height: 35vh;">
   </div>
 
   <!-- Header -->
