Clarify: 8 positions, one local person per venue

--- a/index.html
+++ b/index.html
@@ -354,13 +354,13 @@
 
   <!-- Hero -->
   <section class="hero">
-    <div class="hero-badge">🎬 NOW HIRING — ALL VENUES</div>
+    <div class="hero-badge">🎬 NOW HIRING — 8 POSITIONS</div>
     <h1>Capture the Magic</h1>
-    <p>We build a complete Christmas light show in one week. We need local videographers to document the journey — from empty lot to opening night.</p>
+    <p>We build a complete Christmas light show in one week. We need <strong>one local videographer per venue</strong> to document the journey — from empty lot to opening night.</p>
     <div class="hero-stats">
       <div class="stat">
         <div class="stat-value">8</div>
-        <div class="stat-label">Venues Hiring</div>
+        <div class="stat-label">Positions (1 per venue)</div>
       </div>
       <div class="stat">
         <div class="stat-value">12-15</div>
@@ -436,7 +436,8 @@
     </div>
     
     <div class="section">
-      <div class="section-title"><span class="icon">📍</span> Venues Hiring</div>
+      <div class="section-title"><span class="icon">📍</span> 8 Positions — One Per Venue</div>
+      <p style="color: var(--text-dim); margin-bottom: 16px;">Each venue needs a <strong>local person</strong> who can be there during the build. Pick the venue closest to you.</p>
       <div class="venues-grid">
         <div class="venue-card"><div class="icon">🏟️</div><div class="name">Katy</div><div class="region">Houston Area</div></div>
         <div class="venue-card"><div class="icon">🏟️</div><div class="name">Spring</div><div class="region">Houston Area</div></div>
