Add Content Creator logo to splash and header

--- a/apply.html
+++ b/apply.html
@@ -234,8 +234,8 @@
 </head>
 <body>
   <div class="hero">
-    <h1>🎬 Join Our Creator Team</h1>
-    <p>Get paid to create content for Texas's biggest drive-through light show</p>
+    <img src="creator-logo.png?v=2" alt="Content Creator" style="max-height:80px;margin-bottom:12px;">
+    <p style="font-size:18px;">Get paid to create content for Texas's biggest drive-through light show</p>
     <div class="hero-badge">📍 8 Venues • Now Hiring</div>
   </div>
   
