--- a/index.html
+++ b/index.html
@@ -333,12 +333,12 @@
 <body>
   <!-- Splash Screen -->
   <div id="splash">
-    <img src="creator-logo.png" alt="Creator Portal" onerror="this.parentElement.classList.add('hidden')">
+    <img src="creator-logo.png?v=2" alt="Creator Portal">
   </div>
   
   <!-- Header -->
   <div class="header">
-    <h1>🎬 Creator Portal</h1>
+    <img src="creator-logo.png?v=2" alt="Content Creator" style="max-height:60px;margin-bottom:8px;">
     <p>The Light Park Content Team</p>
     <select class="venue-select" id="venueSelect">
       <option value="katy">📍 Katy</option>
