--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>Creator Portal | The Light Park</title>
+  <!-- Unified Cloud Sync -->
+    <script src="https://thelightparkops.com/shared/cloud-sync.js"></script>
+    <title>Creator Portal | The Light Park</title>
   <link rel="manifest" href="manifest.json">
   <style>
     :root {
