--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
       .resource-card { padding: 16px 12px; }
     }
   </style>
+  <script src="supabase-sync.js"></script>
 </head>
 <body>
   <!-- Splash Screen -->
@@ -339,7 +340,10 @@
   </div>
   
   <!-- Header -->
-  <div class="header">
+  <div class="header" style="position: relative; padding-top: 50px;">
+      <a href="https://thelightparkops.com" style="position: absolute; top: 20px; left: 20px; color: #a855f7; text-decoration: none; font-size: 14px; font-weight: 600; display: flex; align-items: center; gap: 6px; transition: all 0.2s; z-index: 10;" onmouseover="this.style.color='#06d6a0'" onmouseout="this.style.color='#a855f7'">
+        ← Dashboard
+      </a>
     <img src="creator-logo.png?v=2" alt="Content Creator" style="max-height:60px;margin-bottom:8px;">
     <p>The Light Park Content Team</p>
     <select class="venue-select" id="venueSelect">
