--- a/index.html
+++ b/index.html
@@ -332,6 +332,9 @@
     }
   </style>
   <script src="supabase-sync.js"></script>
+  <script src="/shared/supabase-auth.js"></script>
+  <script src="/shared/activity-logger.js"></script>
+  <script src="/shared/auth-gate.js" data-app="Content Creator" data-icon="🎬"></script>
 </head>
 <body>
   <!-- Splash Screen -->
