--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
     }
   </style>
   <script src="supabase-sync.js"></script>
-  <script src="/shared/supabase-auth.js?v=20260211f"></script>
-  <script src="/shared/activity-logger.js?v=20260211f"></script>
-  <script src="/shared/auth-gate.js?v=20260211f" data-app="Content Creator" data-icon="🎬"></script>
+  <script src="https://thelightparkops.com/shared/supabase-auth.js?v=20260211f"></script>
+  <script src="https://thelightparkops.com/shared/activity-logger.js?v=20260211f"></script>
+  <script src="https://thelightparkops.com/shared/auth-gate.js?v=20260211f" data-app="Content Creator" data-icon="🎬"></script>
 </head>
 <body>
   <!-- Splash Screen -->
