Feature: Add back-to-dashboard.js integration + manifest

--- a/apply.html
+++ b/apply.html
@@ -400,5 +400,6 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
+<script src="/shared/back-to-dashboard.js"></script>
 </body>
 </html>
